Fix to align borders and fix package list height in narrow layout.

--- a/src/Bootstrap/less/theme/page-api-keys.less
+++ b/src/Bootstrap/less/theme/page-api-keys.less
@@ -44,10 +44,10 @@
         padding-top: 0;
         padding-bottom: 0;
         @media (max-width: @screen-sm-min) {
-          min-height: 200px;
+          height: 200px;
         }
         @media (min-width: @screen-sm-min) {
-          min-height: auto;
+          height: auto;
         }
       }
     }
@@ -73,9 +73,11 @@
           top: 0;
           left: 0;
           bottom: 0;
-          width: 100%;
+          right: 0;
           display: flex;
           flex-direction: column;
+          margin-right: 15px;
+          margin-left: 15px;
 
           .available-packages-container {
             flex: 1 1 0;
